--- a/figures/Screen Shot 2017-03-30 at 6.43.02 PM/config.yml
+++ b/figures/Screen Shot 2017-03-30 at 6.43.02 PM/config.yml
@@ -1,5 +1,9 @@
-version: 1
+---
 multicolumn: false
+export-width: 
 web-width: 500px
 align: center
 float: h!
+export-filename: 
+version: 1
+path: figures/Screen Shot 2017-03-30 at 6.43.02 PM/config.yml
